--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,8 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: lily58_left
+    shield: dactyl_manuform_5x6_left
   - board: nice_nano_v2
-    shield: lily58_right
+    shield: dactyl_manuform_5x6_right
+  - board: nice_nano_v2
+    shield: settings_reset
